<resources>
    <string name="app_name">Fractal</string>
    <string name="login">Login</string>
    <string name="registerhere">Register Here</string>
    <string name="register">Register</string>
    <string name="title_activity_lawyer_notification">LawyerNotificationActivity</string>
    <string name="prompt_call">User Id</string>
    <string name="prompt_password">Password</string>
    <string name="menu_settings">Settings</string>
    <string name="action_sign_in_short">Sign in</string>
</resources>
